[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yaslp"
authors = [
    {name = "Renat Sibgatulin", email = "sibgatulin@tuta.io"}
]
version = "0.1.2"
license = { text = "MIT License" }
description = "Yet Another Shepp-Logan Phantom, this time using jax.numpy"
dependencies = ["jax"]

[tool.setuptools]
packages = ["yaslp"]
